--- a/app/src/main/res/layout/fragment_events_fragment.xml
+++ b/app/src/main/res/layout/fragment_events_fragment.xml
@@ -78,6 +78,22 @@
             app:fab_label="Mes évènements"
             app:fab_size="mini" />
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fabDisplaySubscribes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_email"
+            app:fab_label="Abonnements"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fabDisplayParticipation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_event"
+            app:fab_label="Mes participations"
+            app:fab_size="mini" />
+
     </com.github.clans.fab.FloatingActionMenu>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
