--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:backgroundTint="@android:color/transparent"
         android:text="@string/register"
         android:textColor="@color/colorGreyText"
