Display, read and add musics

--- a/app/src/main/res/layout/activity_user_searched.xml
+++ b/app/src/main/res/layout/activity_user_searched.xml
@@ -43,4 +43,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
+    <Button
+        android:id="@+id/artistTitlesButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/hisSongs"
+        android:textColor="@color/colorWhite"
+        android:backgroundTint="@color/colorLightBlack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/followButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
