--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -43,7 +43,6 @@
         android:id="@+id/playlistRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,5 +51,17 @@
         app:layout_constraintTop_toBottomOf="@+id/createPlaylistEditText">
 
     </androidx.recyclerview.widget.RecyclerView>
+
+    <TextView
+        android:id="@+id/noPlaylistCreated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/noPlaylist"
+        android:textColor="@color/colorWhite"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
