--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -4,14 +4,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:padding="1dp"
     android:id="@+id/playlistItem">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/item_card_playlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,7 +18,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorWhiteBlack">
+            android:background="@color/colorWhiteBlack"
+            android:padding="1dp">
 
             <TextView
                 android:id="@+id/string_item_playlist"
