On completion start new song + fix start music bug

--- a/app/src/main/res/layout/mini_player.xml
+++ b/app/src/main/res/layout/mini_player.xml
@@ -43,6 +43,7 @@
         android:layout_marginBottom="8dp"
         android:background="@null"
         android:src="@drawable/play"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
