--- a/app/src/main/res/layout/activity_add_song.xml
+++ b/app/src/main/res/layout/activity_add_song.xml
@@ -7,9 +7,7 @@
     android:background="@color/colorLightBlack"
     tools:context=".Controllers.Song.AddMusic">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar" />
+    <include layout="@layout/toolbar" />
 
     <ImageButton
         android:id="@+id/importMusicButton"
@@ -20,7 +18,7 @@
         android:background="@null"
         android:src="@drawable/ic_action_upload"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <TextView
         android:id="@+id/musicNameTextView"
@@ -32,7 +30,23 @@
         android:text="@string/importMusic"
         android:textColor="@color/colorWhite"
         app:layout_constraintStart_toEndOf="@+id/importMusicButton"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <EditText
+        android:id="@+id/musicNameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:drawablePadding="@dimen/drawable_padding"
+        android:drawableStart="@drawable/ic_action_library"
+        android:hint="@string/yourMusicName"
+        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorGreyText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/musicNameTextView" />
 
     <Button
         android:id="@+id/validateAddMusicButton"
