--- a/app/src/main/res/layout/activity_artist_musics.xml
+++ b/app/src/main/res/layout/activity_artist_musics.xml
@@ -13,7 +13,7 @@
         android:id="@+id/artistMusicsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/include3"
+        app:layout_constraintBottom_toTopOf="@+id/player"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <include
-        android:id="@+id/include3"
+        android:id="@+id/player"
         layout="@layout/mini_player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
