Modify buttons colors

--- a/app/src/main/res/layout/activity_user_searched.xml
+++ b/app/src/main/res/layout/activity_user_searched.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/colorLightBlack"
+        android:backgroundTint="@color/colorWhiteBlack"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -52,7 +52,7 @@
         android:layout_marginEnd="32dp"
         android:text="@string/hisSongs"
         android:textColor="@color/colorWhite"
-        android:backgroundTint="@color/colorLightBlack"
+        android:backgroundTint="@color/colorWhiteBlack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/followButton" />
